--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,135 @@
-<p>home works!</p>
+ 
+<!-- category selection -->
+<div class="container">
+    <div class="row">
+        <ul class="nav justify-content-between w-75 m-auto cursor">
+            <li class="nav-item">
+                <a class="nav-link active p-2">
+                        <img class="d-block m-auto" src="https://www.medibuddy.in/assets/services/doctor.svg" alt="Talk to Doctor" width="70" height="70">
+
+                    <span class="mt-1 text-dark">Talk To Doctor</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active p-2" routerLink="/medicine-home">
+                    <img class="d-block m-auto" src="https://www.medibuddy.in/assets/services/medicine.svg" alt="" width="70"
+                        height="70">
+                    <span class="mt-1 text-dark">Medicine</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active p-2">
+                    <img class="d-block m-auto" src="https://www.medibuddy.in/assets/services/consulation.svg" alt="dr. appointment" width="70"
+                        height="70">
+                    <span class="mt-1 text-dark">Book Dr. Appointment</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active p-2">
+                    <img class="d-block m-auto" src="https://www.medibuddy.in/assets/services/labtest.svg"  alt="" width="70" height="70">
+                    <span class="mt-1 text-dark">Lab tests & Packages</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active p-2">
+                    <img class="d-block m-auto" src="https://www.medibuddy.in/assets/services/surgery.svg"  alt="" width="70" height="70">
+                    <span class="mt-1 text-dark">Surgery</span>
+                </a>
+            </li>
+            
+        </ul>
+    </div>
+</div>
+
+<!--  -->
+<div class="container mt-4 w-75 border py-3 shadow-sm rounded-pill">
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link text-dark heading">Consult with Top Doctors Online, 24x7</a>
+        </li>
+        <li class="nav-item border rounded-pill px-5">
+            <a class="nav-link">Start Consultation</a>
+        </li>
+    </ul>
+
+    <!-- <div class="row">
+    <div class="col-md-5 text-center">
+        <p class="heading">Consult with Top Doctors Online, 24x7 </p>
+    </div>
+    <div class="col-md-6 text-end">
+        <p class="fs-6 text-primary border w-75 px-5 py-2 rounded-pill">Start Consultation</p>
+    </div>
+  </div> -->
+
+</div>
+
+<div class="container mt-4 w-75">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://views.medibuddy.in/homePageBanners/diagonistic_centers.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://views.medibuddy.in/surgeryBanners/surgery02.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://views.medibuddy.in/surgeryBanners/surgery03.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://views.medibuddy.in/surgeryBanners/surgery01.png" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+</div>
+
+<div class="container w-75 mt-2 p-1 shadow">
+    <img src="https://views.medibuddy.in/dynamic-banner/medibuddyHomeFirstFoldWebABHA.svg" alt="" style="width: 100%;">
+</div>
+
+<div class="nav justify-content-center fw-bolder mt-2 p-1">
+    <p>Watch Amitabh Bachchan emphasize the importance of Unlimited Expert Doctor Consultations online for the entire family.</p>
+</div>
+
+<div style="margin: bottom 10px" class="text-center">
+  <div class="w-75 fw-700 fs-3 m-b-15 text-center">Download the App</div>
+</div>
+
+<div class="container mt-4 w-75 py-3">
+    <ul class="nav justify-content-center">
+    <li>
+        <img src="https://www.medibuddy.in/assets/images/android.png" alt="googlePlay" width="70%" height="70%" >
+    </li>
+<li>
+
+    <img src="https://www.medibuddy.in/assets/images/ios.png" alt="ios" width="70%" height="70%">
+
+</li>
+
+</ul>
+</div>
+
+<div class="col-md-6">
+    <video width="100%" height="100%" style="border-radius: 16px">
+        <source src="../../../assets/video/mb-amitabh.mp4" type="video/mp4">
+    </video>
+</div>
+
+<div class="col-md-5 p-l-0 bold">
+    <span class="pull-left m-b-30 fw-700"> Medi
+        <span >Buddy&nbsp;</span>
+    </span>
+    <span class="gold-text">GOLD</span>
+<div class="rb-gradient-text col-md-9 bold m-b-30">
+ Give the care your family deserves
+</div>
+</div>
