--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,32 @@
-<h2>Header component!</h2>
+<!-- <h2>Header component!</h2>
+ <header class="header">
+    <div class="header-container row border shadow-sm">
+        <div class="logo col-md-4 text-center p-2 fs-6 fw-bolder">
+            <img src="https://www.medibuddy.in/assets/logos/medibuddyWithName.svg" alt="MediBuddy Logo" />
+
+        </div>
+
+        <div class="nav-links">
+            <a href="/about" class="about-link">About us</a>
+            <br>
+            <a href="/login" class="login-btn">Login</a>
+        </div>
+
+    </div>
+</header> -->
+
+<div class="row border shadow-sm">
+    <div class="col-md-4 text-center p-2 fs-6 fw-bolder">
+        <img src="https://www.medibuddy.in/assets/logos/medibuddyWithName.svg" alt="MediBuddy Logo" width="50%" height="50%"/>  
+      </div>
+    <div class="col-md-7">
+        <ul class="nav d-flex justify-content-end p-2 fw-bold font-size">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page">About Us</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link">Login</a>
+            </li>
+        </ul>
+    </div>
+</div>
